--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,10 @@
-[package]
-name = "specte-rs"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+members = [
+    "spirit",
+    "appirition",
+]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+resolver = "2"
 
-[dependencies]
-serde = { version = "1.0", features = ["derive"] }
-serde_json = { version = "1.0" }
-hex = { version = "0.4", features = ["serde"] }
+[profile.release]
+lto = true
