--- a/spirit/Cargo.toml
+++ b/spirit/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
 hex = { version = "0.4", features = ["serde"] }
+derive_more = "0.99"
+array-concat = "0.5.2"
