--- a/spirit/Cargo.toml
+++ b/spirit/Cargo.toml
@@ -11,3 +11,4 @@ serde_json = { version = "1.0" }
 hex = { version = "0.4", features = ["serde"] }
 derive_more = "0.99"
 array-concat = "0.5.2"
+once_cell = "1.19"
