--- a/tombstone/Cargo.toml
+++ b/tombstone/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 linker = "/usr/bin/aarch64-linux-gnu-gcc"
 
 [dependencies]
+crossterm = "0.27.0"
+ratatui = { version = "0.26.3", features = ["all-widgets"] }
 spirit = { path = "../spirit" }
