--- a/spirit/Cargo.toml
+++ b/spirit/Cargo.toml
@@ -12,3 +12,4 @@ hex = { version = "0.4", features = ["serde"] }
 derive_more = "0.99"
 array-concat = "0.5.2"
 once_cell = "1.19"
+tracing = "0.1.40"
