--- a/tombstone/Cargo.toml
+++ b/tombstone/Cargo.toml
@@ -10,4 +10,6 @@ linker = "/usr/bin/aarch64-linux-gnu-gcc"
 crossterm = "0.27.0"
 ratatui = { version = "0.26.3", features = ["all-widgets"] }
 spirit = { path = "../spirit" }
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
 untwine = "0.8.0"
