--- a/ghast/Cargo.toml
+++ b/ghast/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-iced = { version = "0.12.1", features = ["canvas", "tokio"] }
+iced = { version = "0.12.1", features = ["advanced", "canvas", "image", "tokio"] }
 spirit = { path = "../spirit" }
 time = { version = "0.3.36", features = ["local-offset"] }
 tracing-subscriber = "0.3.18"
