--- a/ghast/Cargo.toml
+++ b/ghast/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 iced = { version = "0.12.1", features = ["advanced", "canvas", "image", "tokio"] }
+itertools = "0.13.0"
 spirit = { path = "../spirit" }
 time = { version = "0.3.36", features = ["local-offset"] }
 tracing-subscriber = "0.3.18"
