--- a/spirit/Cargo.toml
+++ b/spirit/Cargo.toml
@@ -14,6 +14,8 @@ array-concat = "0.5.2"
 # once_cell = "1.19"
 tracing = "0.1.40"
 heapless = "0.8.0"
+serde = { version = "1.0.210", features = ["derive"] }
 
 [dev-dependencies]
+postcard = { version = "1.0.10", features = ["alloc"] }
 test-log = "0.2.16"
