--- a/tombstone/Cargo.toml
+++ b/tombstone/Cargo.toml
@@ -14,3 +14,4 @@ tracing-subscriber = "0.3.18"
 tokio = { version = "1.40.0", features = ["full"] }
 iced = "0.13.1"
 tokio-stream = { version = "0.1.16", features = ["sync"] }
+indexmap = "2.6.0"
