--- a/ghast/Cargo.toml
+++ b/ghast/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/main.rs"
 [dependencies]
 iced = { version = "0.13.1", features = ["advanced", "canvas", "image", "tokio"] }
 itertools = "0.13.0"
+png = "0.17.14"
 spirit = { path = "../spirit" }
 time = { version = "0.3.36", features = ["local-offset"] }
 tracing-subscriber = "0.3.18"
