Debugging initial play test

--- a/spirit/Cargo.toml
+++ b/spirit/Cargo.toml
@@ -13,6 +13,7 @@ tracing = "0.1.40"
 heapless = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.210", features = ["derive"] }
 serde_with = "3.9.0"
+chrono = { version = "0.4.38", features = ["serde"] }
 
 [dev-dependencies]
 postcard = { version = "1.0.10", features = ["alloc"] }
