--- a/ghast/Cargo.toml
+++ b/ghast/Cargo.toml
@@ -12,9 +12,11 @@ name = "ghast"
 path = "src/main.rs"
 
 [dependencies]
+clap = { version = "4.5.21", features = ["derive"] }
 iced = { version = "0.13.1", features = ["advanced", "canvas", "image", "tokio"] }
 itertools = "0.13.0"
 png = "0.17.14"
+postcard = { version = "1.1.1", features = ["alloc"] }
 spirit = { path = "../spirit" }
 time = { version = "0.3.36", features = ["local-offset"] }
 tracing-subscriber = "0.3.18"
