--- a/spirit/Cargo.toml
+++ b/spirit/Cargo.toml
@@ -17,5 +17,6 @@ chrono = { version = "0.4.38", features = ["serde"] }
 serde_json = "1.0.140"
 
 [dev-dependencies]
+serde = { version = "1.0.210", features = ["derive", "rc"] }
 postcard = { version = "1.0.10", features = ["alloc"] }
 test-log = "0.2.16"
