--- a/ghast/Cargo.toml
+++ b/ghast/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ghast"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [lib]
 name = "ghast"
@@ -18,6 +18,7 @@ iced = { version = "0.13.1", features = ["advanced", "canvas", "image", "tokio"]
 itertools = "0.13.0"
 png = "0.17.14"
 postcard = { version = "1.1.1", features = ["alloc"] }
+rfd = "0.15.3"
 serde = { version = "1.0.219", features = ["derive"] }
 spirit = { path = "../spirit" }
 time = { version = "0.3.36", features = ["local-offset"] }
