--- a/ghast/Cargo.toml
+++ b/ghast/Cargo.toml
@@ -22,5 +22,6 @@ rfd = "0.15.3"
 serde = { version = "1.0.219", features = ["derive"] }
 spirit = { path = "../spirit" }
 time = { version = "0.3.36", features = ["local-offset"] }
+tokio = { version = "1.47.1", features = ["full"] }
 toml = "0.8.23"
 tracing-subscriber = "0.3.18"
