--- a/spirit/Cargo.toml
+++ b/spirit/Cargo.toml
@@ -15,6 +15,7 @@ serde = { version = "1.0.210", features = ["derive"] }
 serde_with = "3.9.0"
 chrono = { version = "0.4.38", features = ["serde"] }
 serde_json = "1.0.140"
+test-log = "0.2.16"
 
 [dev-dependencies]
 serde = { version = "1.0.210", features = ["derive", "rc"] }
