--- a/tombstone/Cargo.toml
+++ b/tombstone/Cargo.toml
@@ -17,5 +17,5 @@ tokio-stream = { version = "0.1.16", features = ["sync"] }
 indexmap = "2.6.0"
 heapless = "0.9.1"
 serde = { version = "1.0.228", features = ["derive"] }
-toml = "0.9.8"
 md5 = "0.8.0"
+serde_cbor = { version = "0.11.2", features = ["alloc"] }
