--- a/imp/Cargo.toml
+++ b/imp/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 spirit = { path = "../spirit" }
 clap = { version = "4.5.18", features = ["derive"] }
 postcard = { version = "1.0.10", features = ["alloc"] }
+rboy = { path = "../../rboy" }
