--- a/tombstone/Cargo.toml
+++ b/tombstone/Cargo.toml
@@ -19,4 +19,4 @@ heapless = "0.9.1"
 serde = { version = "1.0.228", features = ["derive"] }
 md5 = "0.8.0"
 serde_cbor = { version = "0.11.2", features = ["alloc"] }
-rboy = { path = "../../rboy" }
+rboy = { path = "../../external/rboy" }
