--- a/spirit/Cargo.toml
+++ b/spirit/Cargo.toml
@@ -21,3 +21,5 @@ test-log = "0.2.16"
 serde = { version = "1.0.210", features = ["derive", "rc"] }
 postcard = { version = "1.0.10", features = ["alloc"] }
 test-log = "0.2.16"
+strum = { version = "0.27.2", features = ["derive"] }
+strum_macros = "0.27.2"
